--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,9 @@ h3{
 
 .toast-body > p{
   position: absolute;
+  right: 0;
+  left: 0;
   width: 100%;
-  height: 100%;
   margin: 0;
   font-size: 1.5rem;
 }
